# Recettes

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish.yaml
recipes/: _template.yaml  baklava.yaml  banana_bread.yaml  bananes_flambees.yaml  bavarois_fruits_rouges.yaml  blueberry_muffins.yaml  bretzels.yaml  brioche.yaml  brownies.yaml  cake_dattes.yaml  cake_marbre.yaml  cake_noix_roquefort.yaml  cheesecake_breton_citron.yaml  cheesecake_special_kb.yaml  chili.yaml  chili_con_carne.yaml  choux_rouge_marrons.yaml  cookie_chocolat.yaml  cookie_frangipane.yaml  creme_vanille.yaml  crepes.yaml  crumble_courgette_cumin.yaml  crumble_pommes.yaml  flan_patissier.yaml  foccacia.yaml  fondant_chocolat_marron.yaml  gateau_fraises.yaml  gateau_yaourt.yaml  gauffres.yaml  guacamole.yaml  houmous.yaml  lasagnes_bolognaise.yaml  lasagnes_ricotta_epinards.yaml  lemon_square.yaml  lentilles_chorizo.yaml  madeleines.yaml  mochi.yaml  obama_cookies.yaml  pain_degoulinant.yaml  pain_epice.yaml  (+26 more)
script/: build_cookbook.py
templates/: index.html  recipe.html  theme.css
templates/tags/: quick.html
